commit translated contents

--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -214,6 +214,8 @@
               href: functions-create-scheduled-function.md
         - name: バインドの追加
           items:
+            - name: バインドの追加方法
+              href: add-bindings-existing-function.md
             - name: Azure Cosmos DB - ポータル
               href: functions-integrate-store-unstructured-data-cosmosdb.md
             - name: ストレージ - Python
