--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -119,6 +119,8 @@
           href: troubleshoot-capacity-pools.md
         - name: リージョン間レプリケーションのトラブルシューティング
           href: troubleshoot-cross-region-replication.md
+        - name: デュアルプロトコル ボリュームのトラブルシューティング
+          href: troubleshoot-dual-protocol-volumes.md
         - name: スナップショット ポリシーのトラブルシューティング
           href: troubleshoot-snapshot-policies.md
 - name: リファレンス
