--- a/articles/azure-resource-manager/templates/toc.yml
+++ b/articles/azure-resource-manager/templates/toc.yml
@@ -162,7 +162,7 @@
               href: ../../private-link/create-private-link-service-template.md?toc=/azure/azure-resource-manager/templates/toc.json
             - name: Web アプリケーション ファイアウォール
               href: ../../web-application-firewall/ag/quick-create-template.md?toc=/azure/azure-resource-manager/templates/toc.json
-        - name: Security
+        - name: セキュリティ
           items:
             - name: Key Vault
               href: ../../key-vault/secrets/quick-create-template.md?toc=/azure/azure-resource-manager/templates/toc.json
@@ -379,7 +379,7 @@
           href: key-vault-parameter.md
     - name: CI/CD
       items:
-        - name: パイプラインを使用した VS プロジェクト
+        - name: パイプラインを使用したリソース マネージャー テンプレート
           href: add-template-to-azure-pipelines.md
         - name: デプロイ - GitHub Actions
           href: deploy-github-actions.md
