--- a/articles/cost-management-billing/index.yml
+++ b/articles/cost-management-billing/index.yml
@@ -1,22 +1,22 @@
 ### YamlMime:Landing
 title: Azure Cost Management および Billing のドキュメント
-summary: Azure Cost Management および Billing は、Azure の課金の把握、アカウントとサブスクリプションの管理、Azure での支出の監視と制御、リソース使用の最適化に役立ちます。 コストを分析する方法、予算を作成および管理する方法、推奨事項を確認して対処する方法についてご確認ください。
+summary: Azure Cost Management + Billing は、Azure の請求書 (課金) の把握、課金アカウントとサブスクリプションの管理、Azure での支出の監視と制御、リソース使用の最適化に役立ちます。 コストを分析する方法、予算を作成および管理する方法、推奨事項を確認して対処する方法についてご確認ください。
 metadata:
   title: Azure Cost Management および Billing
-  description: Azure Cost Management および Billing は、Azure の課金の把握、アカウントとサブスクリプションの管理、Azure での支出の監視と制御、リソース使用の最適化に役立ちます。 コストを分析する方法、予算を作成および管理する方法、推奨事項を確認して対処する方法についてご確認ください。
+  description: Azure Cost Management + Billing は、Azure の請求書 (課金) の把握、課金アカウントとサブスクリプションの管理、Azure での支出の監視と制御、リソース使用の最適化に役立ちます。 コストを分析する方法、予算を作成および管理する方法、推奨事項を確認して対処する方法についてご確認ください。
   ms.service: cost-management-billing
   ms.subservice: common
   ms.topic: landing-page
   ms.collection: collection
   author: bandersmsft
   ms.author: banders
-  ms.date: 08/20/2020
-  ms.openlocfilehash: d3fda9926d5e775dfcd4e36f4733c1e83daf709e
-  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
+  ms.date: 01/01/2020
+  ms.openlocfilehash: 3c570c0c258d93086c64c463c6fea3f3bb9bd741
+  ms.sourcegitcommit: b4f303f59bb04e3bae0739761a0eb7e974745bb7
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/25/2020
-  ms.locfileid: "91270816"
+  ms.lasthandoff: 10/02/2020
+  ms.locfileid: "91652161"
 landingContent:
 - title: コストの分析
   linkLists:
