--- a/articles/machine-learning/data-science-virtual-machine/toc.yml
+++ b/articles/machine-learning/data-science-virtual-machine/toc.yml
@@ -56,6 +56,8 @@
           href: dsvm-common-identity.md
         - name: リソースのアクセス資格情報のセキュリティ保護
           href: dsvm-secure-access-keys.md
+    - name: Data Science Virtual Machine を Ubuntu 18.04 にアップグレードする
+      href: ubuntu-upgrade.md
 - name: リソース
   items:
     - name: Microsoft Q&A 質問ページ
