commit translated contents

--- a/articles/azure-resource-manager/custom-providers/index.yml
+++ b/articles/azure-resource-manager/custom-providers/index.yml
@@ -11,10 +11,10 @@ metadata:
   ms.author: tomfitz
   ms.date: 01/02/2020
   ms.openlocfilehash: 4a778d56aa3d7440715cdd792827b9c4a2837e65
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/24/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "75648346"
 landingContent:
 - title: Azure カスタム プロバイダーについて
@@ -53,7 +53,7 @@ landingContent:
       url: custom-providers-action-endpoint-how-to.md
     - text: カスタム リソースを Azure に追加する
       url: custom-providers-resources-endpoint-how-to.md
-- title: 例
+- title: 使用例
   linkLists:
   - linkListType: reference
     links:
