--- a/articles/cloud-services/breadcrumb/toc.yml
+++ b/articles/cloud-services/breadcrumb/toc.yml
@@ -2,6 +2,6 @@
   tocHref: /azure/
   topicHref: /azure/index
   items:
-    - name: Cloud Services
+    - name: クラウド サービス
       tocHref: /azure/cloud-services
       topicHref: /azure/cloud-services/index
