--- a/articles/dedicated-hsm/breadcrumb/toc.yml
+++ b/articles/dedicated-hsm/breadcrumb/toc.yml
@@ -2,6 +2,6 @@
   tocHref: /azure/
   topicHref: /azure/index
   items:
-    - name: 専用 HSM
+    - name: Dedicated HSM
       tocHref: /azure/
       topicHref: /azure/dedicated-hsm/index
