--- a/articles/open-datasets/breadcrumb/toc.yml
+++ b/articles/open-datasets/breadcrumb/toc.yml
@@ -2,6 +2,6 @@
   tocHref: /azure/
   topicHref: /azure/index
   items:
-    - name: オープン データセット
+    - name: Open Datasets
       tocHref: /azure/machine-learning/service
       topicHref: /azure/open-datasets/index
