--- a/articles/active-directory/privileged-identity-management/index.yml
+++ b/articles/active-directory/privileged-identity-management/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.author: curtand
   ms.date: 08/28/2019
   ms.openlocfilehash: 80b562ff3f5fba7c57253e3761802dd3379b017b
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "72554319"
 landingContent:
 - title: Privileged Identity Management について
@@ -33,7 +33,7 @@ landingContent:
     links:
     - text: お客様の領域でキーを保護する
       url: https://www.youtube.com/embed/w7wTpZYJJeQ
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: how-to-guide
     links:
