--- a/articles/advisor/index.yml
+++ b/articles/advisor/index.yml
@@ -9,10 +9,10 @@ metadata:
   ms.author: robb
   ms.date: 10/16/2019
   ms.openlocfilehash: e7cf35654bec7302423a62e66a39651ad1745651
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/24/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "75768658"
 landingContent:
 - title: Azure Advisor について
@@ -25,13 +25,13 @@ landingContent:
     links:
     - text: Azure Advisor のビデオ
       url: https://azure.microsoft.com/resources/videos/index/?services=advisor
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: get-started
     links:
     - text: Azure Advisor の使用を開始する
       url: advisor-get-started.md
-- title: リファレンス
+- title: 関連項目
   linkLists:
   - linkListType: reference
     links:
