--- a/articles/blockchain/workbench/index.yml
+++ b/articles/blockchain/workbench/index.yml
@@ -11,10 +11,10 @@ metadata:
   ms.author: patricka
   ms.date: 09/05/2019
   ms.openlocfilehash: 2dda68b1f8fff25759ff250646747f1faf63beb4
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "74324638"
 landingContent:
 - title: Azure Blockchain Workbench について
@@ -31,7 +31,7 @@ landingContent:
     links:
     - text: Azure Blockchain Workbench の概要
       url: https://channel9.msdn.com/Shows/Blocktalk/Introduction-to-Azure-Blockchain-Workbench
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: deploy
     links:
