--- a/articles/event-grid/edge/index.yml
+++ b/articles/event-grid/edge/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.author: spelluru
   ms.date: 10/12/2019
   ms.openlocfilehash: 4b79d64240b96ed41b535f8dbcd1155d67e76282
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "72991615"
 landingContent:
 - title: IoT Edge の Event Grid について
@@ -51,7 +51,7 @@ landingContent:
       url: forward-events-event-grid-cloud.md
     - text: Azure Blob Storage のイベントにローカルで対応する
       url: react-blob-storage-events-locally.md
-- title: Security
+- title: セキュリティ
   linkLists:
   - linkListType: concept
     links:
