--- a/articles/media-services/video-indexer/index.yml
+++ b/articles/media-services/video-indexer/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.author: juliako
   ms.date: 02/18/2020
   ms.openlocfilehash: a3e1ec7b97d76287614b4e154143899acf7fd902
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "77485116"
 landingContent:
 - title: Azure Media Services Video Indexer について
@@ -35,7 +35,7 @@ landingContent:
     links:
     - text: Video Indexer の新機能
       url: release-notes.md
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: quickstart
     links:
