--- a/articles/operations-management-suite/TOC.yml
+++ b/articles/operations-management-suite/TOC.yml
@@ -2,19 +2,19 @@
   items:
     - name: エージェントの監視
       href: ../monitoring/index.md
-- name: はじめに
+- name: 作業開始
   items:
     - name: Azure Monitor ログ
       href: ../log-analytics/log-analytics-get-started.md
-    - name: Automation
+    - name: オートメーション
       href: /azure/automation/
-    - name: バックアップ
+    - name: Backup
       href: ../backup/backup-introduction-to-azure-backup.md
     - name: Site Recovery
       href: ../site-recovery/site-recovery-overview.md
 - name: 方法
   items:
-    - name: 分析
+    - name: 解析
       items:
         - name: Azure Monitor ログ
           href: ../azure-monitor/log-query/log-query-overview.md?toc=%2fazure%2foperations-management-suite%2ftoc.json
@@ -60,7 +60,7 @@
               href: ../azure-monitor/platform/alert-management-solution.md?toc=%2fazure%2foperations-management-suite%2ftoc.json
             - name: Azure Networking Analytics
               href: ../azure-monitor/insights/azure-networking-analytics.md?toc=%2fazure%2foperations-management-suite%2ftoc.json
-            - name: Containers
+            - name: コンテナー
               href: ../azure-monitor/insights/containers.md?toc=%2fazure%2foperations-management-suite%2ftoc.json
             - name: Key Vault Analytics
               href: ../azure-monitor/insights/azure-key-vault.md?toc=%2fazure%2foperations-management-suite%2ftoc.json
