--- a/articles/storage/files/index.yml
+++ b/articles/storage/files/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.author: rogarana
   ms.date: 08/27/2019
   ms.openlocfilehash: 3e9224746c400f9795e16edd51b69740fb3c45c7
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "72299567"
 landingContent:
 - title: Azure Files について
@@ -29,7 +29,7 @@ landingContent:
       url: storage-sync-files-planning.md
     - text: Azure Files とは
       url: storage-files-introduction.md
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: get-started
     links:
@@ -43,7 +43,7 @@ landingContent:
     links:
     - text: Azure File Sync を使用して Windows ファイル サーバーを拡張する
       url: storage-sync-files-extend-servers.md
-- title: '[トラブルシューティング]'
+- title: トラブルシューティング
   linkLists:
   - linkListType: reference
     links:
