--- a/articles/storage/queues/index.yml
+++ b/articles/storage/queues/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.author: mhopkins
   ms.date: 08/27/2019
   ms.openlocfilehash: 871447957b905157625ab487269b9ce1ca105935
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "75457289"
 landingContent:
 - title: Azure キューについて
@@ -25,7 +25,7 @@ landingContent:
     links:
     - text: Azure キューとは
       url: storage-queues-introduction.md
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: quickstart
     links:
