--- a/articles/virtual-desktop/breadcrumb/TOC.yml
+++ b/articles/virtual-desktop/breadcrumb/TOC.yml
@@ -6,12 +6,12 @@
       tocHref: /azure/virtual-desktop
       topicHref: /azure/virtual-desktop/index
       items:
-        - name: リファレンス
+        - name: 関連項目
           tocHref: /WindowsServerDocs/remote/remote-desktop-services/clients/rdp-files
           topicHref: /azure/virtual-desktop/index
-        - name: リファレンス
+        - name: 関連項目
           tocHref: /WindowsServerDocs/remote/remote-desktop-services/virtual-machine-recs
           topicHref: /azure/virtual-desktop/index
-        - name: リファレンス
+        - name: 関連項目
           tocHref: /WindowsServerDocs/remote/remote-desktop-services/network-guidance
           topicHref: /azure/virtual-desktop/index
