--- a/articles/vpn-gateway/index.yml
+++ b/articles/vpn-gateway/index.yml
@@ -11,10 +11,10 @@ metadata:
   ms.author: cherylmc
   ms.date: 08/28/2019
   ms.openlocfilehash: 5a75e2ef81c2ea584e7819d278f63e5ae53b9ce9
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "70885609"
 landingContent:
 - title: VPN Gateway について
@@ -33,7 +33,7 @@ landingContent:
       url: about-zone-redundant-vnet-gateways.md
     - text: VPN Gateway に関する FAQ
       url: vpn-gateway-vpn-faq.md
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: how-to-guide
     links:
@@ -69,7 +69,7 @@ landingContent:
       url: vpn-gateway-about-vpn-gateway-settings.md
     - text: ポイント対サイト ルーティング
       url: vpn-gateway-about-point-to-site-routing.md
-    - text: ゲートウェイの SKU
+    - text: Gateway の SKU
       url: vpn-gateway-about-vpn-gateway-settings.md#gwsku
   - linkListType: how-to-guide
     links:
