--- a/articles/active-directory/fundamentals/index.yml
+++ b/articles/active-directory/fundamentals/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.topic: landing-page
   services: active-directory
   ms.openlocfilehash: 7a6692b4ed0314acc8200e3e364e9a045d33e799
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "80049676"
 landingContent:
 - title: Azure AD の概要
@@ -31,7 +31,7 @@ landingContent:
     links:
     - text: Azure AD のアーキテクチャ
       url: active-directory-architecture.md
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: quickstart
     links:
