--- a/articles/azure-resource-manager/index.yml
+++ b/articles/azure-resource-manager/index.yml
@@ -12,10 +12,10 @@ metadata:
   ms.author: tomfitz
   ms.date: 03/04/2020
   ms.openlocfilehash: 6a0c4ecff3f381dc12ba3ce6f385782754857bfe
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/24/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "78297733"
 highlightedContent:
   items:
@@ -55,7 +55,7 @@ conceptualContent:
       text: ベスト プラクティス
     footerLink:
       url: templates/index.yml
-      text: 詳細情報
+      text: さらに詳しく
   - title: リソースの管理
     links:
     - url: management/overview.md
@@ -78,7 +78,7 @@ conceptualContent:
       text: サブスクリプションとサービスの制限
     footerLink:
       url: management/index.yml
-      text: 詳細情報
+      text: さらに詳しく
   - title: Managed Applications
     links:
     - url: managed-applications/overview.md
@@ -95,7 +95,7 @@ conceptualContent:
       text: アプリを Marketplace に追加する
     footerLink:
       url: managed-applications/index.yml
-      text: 詳細情報
+      text: さらに詳しく
   - title: Azure カスタム プロバイダー
     links:
     - url: custom-providers/overview.md
