--- a/articles/data-lake-store/index.yml
+++ b/articles/data-lake-store/index.yml
@@ -10,10 +10,10 @@ metadata:
   ms.author: twooley
   ms.date: 03/11/2020
   ms.openlocfilehash: bf688b1230c8fd4eecba08ce361e92b9030a241f
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "79410093"
 landingContent:
 - title: Azure Data Lake Storage Gen1 について
@@ -42,7 +42,7 @@ landingContent:
     links:
     - text: Azure Data Factory の使用
       url: ../data-factory/load-azure-data-lake-store.md
-    - text: Storage Explorer の使用
+    - text: ストレージ エクスプローラーの使用
       url: data-lake-store-in-storage-explorer.md
     - text: AdlCopy を使用
       url: data-lake-store-copy-data-azure-storage-blob.md
