--- a/articles/guides/operations/TOC.yml
+++ b/articles/guides/operations/TOC.yml
@@ -1,6 +1,6 @@
 - name: IT オペレーター向けの Azure
   items:
-    - name: Azure の概要
+    - name: Azure を使用して作業を開始する
       href: azure-operations-guide.md
     - name: クイックスタート
       items:
@@ -14,7 +14,7 @@
           items:
             - name: Azure ポータルを使用した仮想ネットワークの作成
               href: ../../virtual-network/quick-create-portal.md?toc=%2fazure%2fguides%2foperations%2ftoc.json
-        - name: Security
+        - name: セキュリティ
           items:
             - name: ロールの割り当てを使用したリソースの管理
               href: ../../role-based-access-control/role-assignments-portal.md?toc=%2fazure%2fguides%2foperations%2ftoc.json
