--- a/articles/iot-dps/index.yml
+++ b/articles/iot-dps/index.yml
@@ -11,10 +11,10 @@ metadata:
   ms.date: 03/03/2020
   ms.author: wesmc
   ms.openlocfilehash: 2d89b99005a4e430aca85c109f3d000c3b21674c
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/24/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "80133273"
 landingContent:
 - title: Azure IoT Hub Device Provisioning Service (DPS) について
@@ -31,7 +31,7 @@ landingContent:
     links:
     - text: IoT Hub DPS のデモ
       url: https://azure.microsoft.com/resources/videos/iot-hub-dps-demo/
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: quickstart
     links:
