--- a/articles/site-reliability-engineering/index.yml
+++ b/articles/site-reliability-engineering/index.yml
@@ -12,10 +12,10 @@ metadata:
   ms.author: dnb
   ms.date: 02/18/2020
   ms.openlocfilehash: e5c1ef5e84f0170927d7fcac65b594d44ed33b93
-  ms.sourcegitcommit: 877491bd46921c11dd478bd25fc718ceee2dcc08
-  ms.translationtype: 
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/01/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "85833436"
 highlightedContent:
   items:
@@ -67,7 +67,7 @@ conceptualContent:
   title: Azure での SRE
   summary: SRE のドキュメント
   items:
-  - title: アーキテクチャ
+  - title: Architecture
     links:
     - url: https://docs.microsoft.com/azure/architecture/framework/
       itemType: reference
