--- a/articles/azure-portal/index.yml
+++ b/articles/azure-portal/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Landing
 title: Azure Portal のドキュメント
-summary: Azure Portal は、コマンドライン ツールに代えて使用できる、Web ベースの統合コンソールです。 Azure Portal を使用して、ご自分の Azure サブスクリプションを管理できます。 簡単な Web アプリから複雑なクラウド デプロイまで、すべてを構築、管理、監視することができます。 リソースを整理して表示するカスタム ダッシュボードを作成したり、最適なエクスペリエンスを提供するアクセシビリティ オプションを構成したりできます。
+summary: Azure portal は、コマンドライン ツールに代えて使用できる、Web ベースの統合コンソールです。 Azure portal を使用して、ご自分の Azure サブスクリプションを管理できます。 簡単な Web アプリから複雑なクラウド デプロイまで、すべてを構築、管理、監視することができます。 リソースを整理して表示するカスタム ダッシュボードを作成したり、最適なエクスペリエンスを提供するアクセシビリティ オプションを構成したりできます。
 metadata:
   title: Azure Portal のドキュメント
-  description: Azure Portal の Web ベース コンソールを使用して自分の Azure サブスクリプションとリソースを管理する方法について説明します。 Azure Portal は、コマンドライン ツールの代わりに使用できます。
-  services: Azure Portal
+  description: Azure portal の Web ベース コンソールを使用して自分の Azure サブスクリプションとリソースを管理する方法について説明します。 Azure portal は、コマンドライン ツールの代わりに使用できます。
+  services: Azure portal
   ms.service: azure-portal
   ms.subservice: 
   ms.topic: landing-page
@@ -13,21 +13,21 @@ metadata:
   ms.author: mblythe
   ms.date: 08/05/2020
   ms.openlocfilehash: f45fc98073dcc6eeee10c691fe9f93860e0fb654
-  ms.sourcegitcommit: 4913da04fd0f3cf7710ec08d0c1867b62c2effe7
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/14/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "88212080"
 landingContent:
-- title: Azure Portal について
+- title: Azure portal について
   linkLists:
   - linkListType: overview
     links:
-    - text: Azure Portal とは
+    - text: Azure portal とは
       url: azure-portal-overview.md
     - text: サポートされているブラウザーとデバイス
       url: azure-portal-supported-browsers-devices.md
-- title: Azure Portal のカスタマイズ
+- title: Azure portal のカスタマイズ
   linkLists:
   - linkListType: how-to-guide
     links:
@@ -37,11 +37,11 @@ landingContent:
       url: azure-portal-dashboards.md
     - text: ご自分のお気に入りの管理
       url: azure-portal-add-remove-sort-favorites.md
-- title: Azure Portal へのアクセスの管理
+- title: Azure portal へのアクセスの管理
   linkLists:
   - linkListType: reference
     links:
-    - text: Azure Portal の URL をセーフリストに追加する
+    - text: Azure portal の URL をセーフリストに追加する
       url: azure-portal-safelist-urls.md
     - text: ダッシュボードのロールベースのアクセス制御
       url: azure-portal-dashboard-share-access.md
@@ -51,7 +51,7 @@ landingContent:
       url: /learn/paths/manage-resources-in-azure/
     - text: ロールベースのアクセス制御 (RBAC) で Azure リソースをセキュリティ保護する
       url: /learn//modules/secure-azure-resources-with-rbac/
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: quickstart
     links:
@@ -59,11 +59,11 @@ landingContent:
       url: azure-portal-quickstart-center.md
   - linkListType: how-to-guide
     links:
-    - text: Azure Portal の使い方に関するビデオ シリーズ
+    - text: Azure portal の使い方に関するビデオ シリーズ
       url: azure-portal-video-series.md
   - linkListType: learn
     links:
-    - text: Azure 基礎
+    - text: Azure の基礎
       url: /learn/paths/azure-fundamentals/
     - text: クラウドの概念 - クラウド コンピューティングの原則
       url: /learn/modules/principles-cloud-computing/
