--- a/articles/active-directory/cloud-provisioning/TOC.yml
+++ b/articles/active-directory/cloud-provisioning/TOC.yml
@@ -60,7 +60,7 @@
           href: how-to-troubleshoot.md
         - name: 重複する属性
           href: /office365/troubleshoot/administration/duplicate-attributes-prevent-dirsync
-- name: リファレンス
+- name: 関連項目
   items:
     - name: Azure AD Connect クラウド プロビジョニング エージェントのバージョン履歴
       href: ../app-provisioning/provisioning-agent-release-version-history.md?context=azure%2factive-directory%2fcloud-provisioning%2fcontext%2fcp-context
