--- a/articles/api-management/index.yml
+++ b/articles/api-management/index.yml
@@ -11,10 +11,10 @@ metadata:
   ms.author: gwallace
   ms.date: 03/08/2020
   ms.openlocfilehash: 64e0d0e7837cd03e2761d8e79653d9ac8b68f41d
-  ms.sourcegitcommit: 814778c54b59169c5899199aeaa59158ab67cf44
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/13/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "90052819"
 landingContent:
 - title: API Management について
@@ -69,7 +69,7 @@ landingContent:
       url: powershell-samples.md
     - text: Azure Policy の組み込み
       url: ./policy-samples.md
-- title: アーキテクチャ
+- title: Architecture
   linkLists:
   - linkListType: architecture
     links:
