--- a/articles/attestation/index.yml
+++ b/articles/attestation/index.yml
@@ -11,10 +11,10 @@ metadata:
   ms.author: mbaldwin
   ms.date: 07/20/2020
   ms.openlocfilehash: 984fecd947cb174ab6663a874071926d16f657bd
-  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "91285403"
 landingContent:
 - title: Microsoft Azure Attestation について
@@ -51,7 +51,7 @@ landingContent:
       url: author-sign-policy.md
     - text: SGX 構成証明コード サンプル
       url: /samples/browse/?expanded=azure&terms=attestation
-- title: リファレンス
+- title: References
   linkLists:
   - linkListType: reference
     links:
