commit translated contents

--- a/articles/cognitive-services/text-analytics/index.yml
+++ b/articles/cognitive-services/text-analytics/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 01/29/2019
   ms.author: aahi
-  ms.openlocfilehash: 8a0cb825321aa28ac6b217362ae2d499eb4e077e
-  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
+  ms.openlocfilehash: 06225b0ca6ca1807acc8664c96542c67cbd9dceb
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "88167625"
+  ms.lasthandoff: 10/09/2020
+  ms.locfileid: "91838978"
 landingContent:
 - title: Text Analytics API について
   linkLists:
@@ -142,6 +142,8 @@ landingContent:
       url: how-tos/text-analytics-how-to-install-containers.md
     - text: Text Analytics コンテナーを構成する
       url: text-analytics-resource-container-config.md
+    - text: Text Analytics for health コンテナーを使用する
+      url: How-tos/text-analytics-for-health.md
     - text: コンテナー インスタンスを Azure にデプロイする
       url: how-tos/text-analytics-how-to-use-container-instances.md
     - text: コンテナーを Azure Kubernetes Service (AKS) にデプロイする
